# ClashOfClans-bot

./: README.md  main.py  pyproject.toml
.github/workflows/: web.yml
settings/: clash_of_clans.py  telegram.py
settings/data/: data.json  loadData.py
