[tool.poetry]
name = "repl_nix_ClashOfClans-bot"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
telegram = "^0.0.1"
utils = "^1.0.1"
Flask = "^2.2.2"
requests = "^2.28.1"
replit = "^3.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
